--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "canvas": "^2.9.3",
+    "cheerio": "^1.0.0-rc.12",
     "oicq": "^2.2.0"
   },
   "devDependencies": {
